--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -1,19 +1,26 @@
-<!-- In case of error, you should display div with class "errorContainer" -->
-<!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-<!-- <div>
+<main id="register">
+  <!-- In case of error, you should display div with class "errorContainer" -->
+  <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+
+  <!-- <div>
             <div class="errorContainer">
                 <p>Error</p>
             </div>
         </div> -->
-<main id="register">
+
   <div class="register-box">
     <h1>Register</h1>
     <h4>It's free and only takes a minute</h4>
     <form method="post">
       <label>Username</label>
-      <input type="text" name="username" placeholder="Username.." />
+      <input
+        type="text"
+        name="username"
+        placeholder="Username.."
+        value="{{username}}"
+      />
       <label>Email</label>
-      <input type="text" name="email" placeholder="Email.." />
+      <input type="text" name="email" placeholder="Email.." value="{{email}}" />
       <label>Password</label>
       <input type="password" name="password" placeholder="Password.." />
       <label>Confirm Password</label>
