--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -5,6 +5,7 @@
       <strong>keys</strong>
       at the
       <strong>best price</strong>!</p>
-    <a href="#" class="buy">BUY</a>
+    <a href="/game/catalog" class="buy">BUY</a>
   </div>
+
 </main>
