fixed search edit all functionality

--- a/src/views/game/search.hbs
+++ b/src/views/game/search.hbs
@@ -10,10 +10,10 @@
         value="{{filter.search}}"
         placeholder="Search here..."
       />
-      <select id="platform" name="platform" value="{{platform}}">
-        {{#each platform}}
+      <select id="platform" name="platform">
+       
                     {{>options}}
-                    {{/each}}
+                  
       </select>
       <button type="submit" class="btn-search">Search</button>
     </form>
