--- a/src/views/partials/options.hbs
+++ b/src/views/partials/options.hbs
@@ -1,1 +1,4 @@
-<option value="{{value}}" {{selected}}>{{option}}</option>
+{{#each platform}}
+  <option value="{{value}}" {{selected}}>{{option}}</option>
+
+{{/each}}
